force-app/main/default/objects/Retour__c/Retour__c.object-meta.xml
<CustomObject>
    <label>Retour</label>
    <nameField>
        <label>LAB#</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>