force-app/main/default/objects/Retour__c/fields/CASE__c.field-meta.xml
<CustomField>
    <fullName>CASE__c</fullName>
    <label>CASE#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>