force-app/main/default/objects/Retour__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>DESCRIPTION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>