force-app/main/default/objects/Retour__c/fields/Dossier__c.field-meta.xml
<CustomField>
    <fullName>Dossier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Retours</relationshipLabel>
    <relationshipName>Retours</relationshipName>
    <type>Lookup</type>
</CustomField>