force-app/main/default/objects/Retour__c/fields/Full_match__c.field-meta.xml
<CustomField>
    <fullName>Full_match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full match</label>
    <type>Checkbox</type>
</CustomField>