force-app/main/default/objects/Retour__c/fields/IdPoste__c.field-meta.xml
<CustomField>
    <fullName>IdPoste__c</fullName>
    <label>IdPoste</label>
    <length>18</length>
    <type>Text</type>
</CustomField>