force-app/main/default/objects/Retour__c/fields/Ligne__c.field-meta.xml
<CustomField>
    <fullName>Ligne__c</fullName>
    <label>Ligne</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>