force-app/main/default/objects/Retour__c/fields/Manually_checked__c.field-meta.xml
<CustomField>
    <fullName>Manually_checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually checked</label>
    <type>Checkbox</type>
</CustomField>