force-app/main/default/objects/Retour__c/fields/Match__c.field-meta.xml
<CustomField>
    <fullName>Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Match</label>
    <type>Checkbox</type>
</CustomField>