force-app/main/default/objects/Retour__c/fields/MEMO__c.field-meta.xml
<CustomField>
    <fullName>MEMO__c</fullName>
    <label>MEMO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>