force-app/main/default/objects/Retour__c/fields/OLD__c.field-meta.xml
<CustomField>
    <fullName>OLD__c</fullName>
    <label>OLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>