force-app/main/default/objects/Retour__c/fields/Statut_de_r_conciliation_dossier__c.field-meta.xml
<CustomField>
    <fullName>Statut_de_r_conciliation_dossier__c</fullName>
    <formula>Dossier__r.Statut_de_r_conciliation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut de réconciliation dossier</label>
    <type>Text</type>
</CustomField>