force-app/main/default/objects/Retour__c/fields/TEETH__c.field-meta.xml
<CustomField>
    <fullName>TEETH__c</fullName>
    <label>TEETH#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>