force-app/main/default/objects/Retour__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Dossier__c</columns>
    <columns>Statut_de_r_conciliation_dossier__c</columns>
    <columns>Full_match__c</columns>
    <columns>Ligne__c</columns>
    <columns>Match__c</columns>
    <columns>Code__c</columns>
    <columns>TEETH__c</columns>
    <columns>Quantite__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Manually_checked__c</columns>
    <columns>CASE__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>IdPoste__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>F2236296</value>
    </filters>
    <label>Tout</label>
</ListView>